<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="#F5A715"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addNewTaskTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/g_rev_listesi"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />


    <Button
        android:id="@+id/date_button"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:gravity="left"
        android:text="@string/tarih_se_iniz"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <ImageButton
        android:id="@+id/btnPickDate"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/tarih_se_imi"
        android:src="@drawable/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/time_button"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:gravity="left"
        android:text="@string/saat_se_iniz"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_button"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/saat_se_imi"
        android:src="@drawable/clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/time_button"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/audio_button"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:gravity="left"
        android:text="@string/zil_sesi_se_iniz"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_button"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Tarih Seçimi"
        android:src="@drawable/music"
        app:layout_constraintEnd_toEndOf="@+id/audio_button"
        app:layout_constraintTop_toTopOf="@+id/audio_button"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="409dp"
        android:layout_height="109dp"
        android:layout_marginTop="60dp"
        android:hint="@string/a_klama_yaz_n_z"
        android:inputType="text"
        android:textColor="#F5A715"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/audio_button"
        tools:ignore="MissingConstraints,UnknownId" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/kaydet"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>


